Add random picture to index.html

--- a/index.html
+++ b/index.html
@@ -7,5 +7,6 @@
     <h1>Steven hiponia</h1>
     <p>ITS152l - FOP101</p>
     <p>BSIT# Hiponia-ITS152</p>
+    <img src="https://picsum.photos/seed/picsum/200/300" alt="Random Picture">
 </body>
 </html>
